@@ -1,3 +1,8 @@
+Mon Mar 16 10:02:52 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>
+
+    * flaxclient.php, unittests/_restclient.php, unittests/test_fields.php: 
+      Added delete field method.
+
 Fri Mar 13 15:48:37 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>
 
     * Added some basic functionality and tests for database fields.
